fix: prevent horizontal scrolling on mobile layout

--- a/styles/app.css
+++ b/styles/app.css
@@ -1371,3 +1371,20 @@ kbd {
         max-width: 330px;
     }
 }
+
+@media (max-width: 400px) {
+
+    .newsletter__content {
+        overflow: hidden;
+    }
+
+    .newsletter__description {
+        font-size: 14px;
+        margin: auto;
+        max-width: 300px;
+    }
+}
+
+* {
+    outline: 1px solid red;
+}
